# spoteamfy

./: .env  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml
cli/: index.html
config/: users.json.sample
docs/: cli.md  index.md  reference.md  setup.md
reference/: index.html
scripts/: auth_validator.py  get_access_token.py  test_auth.py
search/: search_index.json
setup/: index.html
spoteamfy/src/: cli.py  spotify_auth.py  validate_auth.py
spoteamfy/tests/: test_cli.py  test_spotify_auth.py
