[project]
name = "spoteamfy"
version = "0.1.0"
description = "Small utility to post recently played track on spotify to a teams channel."
authors = [
    {name = "sunefibaek",email = "sune.bugge.fibaek@lego.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "spotipy (>=2.25.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
isort = "^6.1.0"
black = "^25.9.0"
flake8 = "^7.3.0"
pytest = "^8.4.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
